--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
         </div>
 
         <h4>Result</h4>
-        <div id="resultContainer">
-
-        </div>
+        <div id="resultContainer"> </div>
        
       </div>
     </main>
